--- a/config/templates/loon.conf
+++ b/config/templates/loon.conf
@@ -45,7 +45,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 [Proxy]
 {% for proxy in proxies %}
 {% if proxy.type == "vmess" %}
-{{ proxy.name }} = Vmess,{{ proxy.server }},{{ proxy.port }},{{ proxy.cipher }},"{{ proxy.uuid }}",transport=ws,alterId={{ proxy.alterId }},path={{ proxy['ws-opts'].path }},host={{ proxy['ws-opts'].headers.Host }},over-tls=true,skip-cert-verify=true
+{{ proxy.name }} = Vmess,{{ proxy.server }},{{ proxy.port }},{{ proxy.cipher }},"{{ proxy.uuid }}",transport={{proxy.network}},alterId={{ proxy.alterId }},path={{ proxy['ws-opts'].path }},host={{ proxy['ws-opts'].headers.Host }},over-tls={{proxy.tls}},skip-cert-verify=true
 {% elif proxy.type == "ss" %}
 {{ proxy.name }} = Shadowsocks,{{ proxy.server }},{{ proxy.port }},{{ proxy.cipher }},"{{ proxy.password }}",fast-open=false,udp=true
 {% elif proxy.type == "http" %}
