--- a/config/base.yaml
+++ b/config/base.yaml
@@ -76,29 +76,6 @@ proxies:
       v2ray-http-upgrade: false
       v2ray-http-upgrade-fast-open: false
 
-  # - name: jpss
-  #   type: ss
-  #   server: 185.239.224.203
-  #   port: 443
-  #   cipher: 2022-blake3-aes-256-gcm
-  #   password: AdYpH9dSSqjTtD7wI+eXvKxN9rifJai9+iQ8D+CSMk8=
-  #   udp: false
-  #   udp-over-tcp: false
-  #   udp-over-tcp-version: 2
-  #   ip-version: ipv4
-  #   plugin: v2ray-plugin
-  #   plugin-opts:
-  #     mode: websocket
-  #     host: shoe.quarkmed.com
-  #     path: "/ss"
-  #     mux: false
-  #     headers:
-  #       host: "shoe.quarkmed.com"
-  #     v2ray-http-upgrade: false
-  #     v2ray-http-upgrade-fast-open: false
-  #   smux:
-  #     enabled: false
-
 rule-providers:
   Apple:
     <<: *r
@@ -156,6 +133,8 @@ rules:
   - DOMAIN-KEYWORD,groq,AI
   - DOMAIN-SUFFIX,lmsys.org,AI
   - DOMAIN-SUFFIX,coze.com,AI
+  - DOMAIN-SUFFIX,x.ai,AI
+  - DOMAIN-SUFFIX,grok.com,AI
   - RULE-SET,Openai,AI
   - RULE-SET,Claude,AI
   - RULE-SET,Gemini,AI
