--- a/config/templates/loon.conf
+++ b/config/templates/loon.conf
@@ -46,6 +46,8 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scr
 {% for proxy in proxies %}
 {% if proxy.type == "vmess" %}
 {{ proxy.name }} = Vmess,{{ proxy.server }},{{ proxy.port }},{{ proxy.cipher }},"{{ proxy.uuid }}",transport={{proxy.network}},alterId={{ proxy.alterId }},path={{ proxy['ws-opts'].path }},host={{ proxy['ws-opts'].headers.Host }},over-tls={{proxy.tls}},sni={{proxy.servername}}
+{% if proxy.type == "vless" %}
+{{ proxy.name }} = VLESS,{{ proxy.server }},{{ proxy.port }},"{{ proxy.uuid }}",transport={{proxy.network}},path={{ proxy['ws-opts'].path }},host={{ proxy['ws-opts'].headers.Host }},over-tls={{proxy.tls}},sni={{proxy.servername}}
 {% elif proxy.type == "ss" %}
 {{ proxy.name }} = Shadowsocks,{{ proxy.server }},{{ proxy.port }},{{ proxy.cipher }},"{{ proxy.password }}",fast-open=false,udp=true
 {% elif proxy.type == "http" %}
