--- a/config/base.yaml
+++ b/config/base.yaml
@@ -349,10 +349,13 @@ dns:
   # 当不是 CN，则使用 fallback 中的 DNS 查询结果
   # 确保配置 fallback 时能够正常查询
   fallback:
-    - https://1.1.1.1/dns-query
-    - https://[2620:fe::fe]/dns-query
-    - tls://1.1.1.1:853
-    - tls://9.9.9.9:853
+    - 168.95.1.1
+    - 168.95.192.1
+    - https://101.102.103.104/dns-query
+    # - https://1.1.1.1/dns-query
+    # - https://[2620:fe::fe]/dns-query
+    # - tls://1.1.1.1:853
+    # - tls://9.9.9.9:853
     # - 'tcp://1.1.1.1#ProxyGroupName' # 指定 DNS 过代理查询，ProxyGroupName 为策略组名或节点名，过代理配置优先于配置出口网卡，当找不到策略组或节点名则设置为出口网卡
 
   # 专用于节点域名解析的 DNS 服务器，非必要配置项，如果不填则遵循nameserver-policy、nameserver和fallback的配置
